# token2-fido-bridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  install.sh
.github/workflows/: RELEASING.md  release.yml
debian/: changelog  control  postinst  prerm  rules
packaging/: 70-token2-fido-bridge.rules  snap-firefox-tag-current-install.rules  token2-fido-bridge.service  token2-fido-bridge.spec
src/: ctap_hid_device.hpp  main.cpp  pcsc.hpp  pcsc_manager.hpp  uhid_device.hpp
